# Eleven

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  cfg.ini.example
.appveyor/: install_dependencies.ps1  platform_check.ps1
src/: config.rs  data_types.in.rs  errors.rs  lib.rs  main.rs
src/actions/: login.rs
src/db/: mod.rs  models.in.rs
src/endpoint/: client.rs  client_types.rs  http.rs  mod.rs  routes.rs
src/endpont/: http.rs  routes.rs
src/rest/: endpoints.rs  errors.rs  handlers.rs  mod.rs  server.rs
tests/: api_standards.rs  tests.rs
