[package]
name = "rustrix"
version = "0.0.1"
authors = ["Justin Noah <justinnoah@gmail.com>"]

[dependencies]
docopt = "0.6"
iron-json-response = { git = "https://github.com/justinnoah/iron-json-response", branch="iron_0.4.0_update" }
log = "*"
rust-ini = "0.9"
rustc-serialize = "0.3"
slog = "1.0"
slog-envlogger = "*"
slog-stdlog = "*"
slog-term = "1.1"

[dependencies.hyper]
version = "0.9"
default-features = false
features = ["openssl"]

[dependencies.iron]
version = "0.4"
features = ["ssl"]
