[package]
name = "rustrix"
version = "0.1.0"
authors = ["Justin Noah <justinnoah@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = {version = "0.8", optional = true}

[dependencies]
docopt = "0.6"
iron-json-response = { git = "https://github.com/justinnoah/iron-json-response", branch="iron_0.4.0_update" }
log = "*"
rust-ini = "0.9"
rustc-serialize = "0.3"
serde = "0.8"
serde_json = "0.8"
serde_derive = {version = "0.8", optional = true}
slog = "1.3"
slog-stdlog = "1.1"
slog-term = "1.3"

[dependencies.hyper]
version = "0.9"
default-features = false
features = ["openssl"]

[dependencies.iron]
version = "0.4"
features = ["ssl"]

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]
