[package]
name = "eleven"
version = "0.1.0"
authors = ["Justin Noah <justinnoah@gmail.com>"]
build = "build.rs"

[lib]
name = "libeleven"
path = "src/lib.rs"

[[bin]]
name = "eleven"
path = "src/main.rs"

[[test]]
name = "tests"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
docopt = "0.6"
jsonway = "1.0"
log = "*"
r2d2 = "0.7"
r2d2_sqlite = "0.1"
rusqlite = "0.7"
rustc-serialize = "0.3"
rustless = "0.9"
rust-ini = "0.9"
serde = "0.8"
serde_json = "0.8"
slog = "1.3"
slog-stdlog = "1.1"
slog-term = "1.3"
typemap = "0.3"
valico = "1.0"
url = "1.2"

[dependencies.hyper]
version = "0.9"
default-features = false
features = ["openssl"]

[dependencies.iron]
version = "0.4"
features = ["ssl"]
